httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhttp
  labels:
    app: httpd
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: sarun444/mypubrepo:2
        ports:
        - containerPort: 80
