httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: testns
spec:
  selector:
    app: httpd
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
